Created Dockerfiles and composed for DEVENV
- Created dockerfiles for each layer (Frontend/backend/Database)
- created composed dockerfile for running each image
- created sql test dump for testing functions

--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "CSC354/355 Team Project.",
   "main": "index.js",
   "scripts": {
-    "start": "node Server/index.js",
-    "client": "cd ./client && npm run serve"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
