New DB api and Client prep
Creation / Update / Removal
 - Created api/dbconnector.js (Still Errors from last DB just needs more cleaning)
 - Updated Dockerfile, index.js, package.json, queries.js in API
 - Updated package.json, App.vue, LandingPage.vue in Client
 - Updated dump.sql in db

Fixed routes for new DB such as fixing which tables are called, created a db api connection script for cleaner code and for adding auth routing

Client(Vue) is still unprepped for Auth routes and needs to be fully updated for new DB tables etc.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16
 WORKDIR /api
-COPY package*.json ./index.js ./queries.js ./
+COPY package*.json ./index.js ./queries.js ./dbconnector.js ./
 RUN npm install 
 EXPOSE 3000
 CMD ["node", "index.js"]
