--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:16
 WORKDIR /api
-COPY package*.json ./index.js ./queries.js ./dbconnector.js ./
+COPY package*.json ./index.js ./dbconnector.js ./
+COPY ./routes/core.js ./routes/users.js  ./routes/
+COPY ./utils/jwt-helper.js ./utils/authorization.js ./utils/
 RUN npm install 
 EXPOSE 3000
 CMD ["node", "index.js"]
