Emailer API created

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - host=db
       - pgdb=linehoptest
       - url=http://localhost
+      - MJ_APIKEY_PUBLIC = 6c9ea700e37a55dbbeb6346560d06b49
+      - MJ_APIKEY_PRIVATE = 9964dd6e37b655df814b213403bf5dd8
     depends_on:
       - db
 
