--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
 
   db:
     container_name: db
-    image: 'postgres:15'
+    image: 'ramazanpolat/postgres_cron:11'
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER=linehop
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin123
       - POSTGRES_DB=linehoptest
     volumes:
