--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
