--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "node-mailjet": "^6.0.2",
